--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
 
-    <title>王红同学圣诞节快乐！</title>
+    <title>呜呜</title>
 
     <link rel="stylesheet" href="css/normalize.css">
 
